--- a/career.html
+++ b/career.html
@@ -80,29 +80,11 @@
     <!-- Career Section Start -->
     <section class="careers">
         <div class="career">
-            <h1 class="career-title">Human Resource(HR)</h1>
-            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="forhr.html">Apply Now</a>
+            <h1 class="career-title">Internship Opportunity</h1>
+            <p class="career-text">The length of the internship varies from a few weeks, to half a year or longer. There is no strict rule for the duration of a placement. We tailor to the need of the intern, the ongoing research and programme. However, USD recommends an engagement of minimum of 3 - 4 months to make the experience beneficial for both the intern and the organization.</p>
+            <a class="career-btn" href="forIntern.html">Apply Now</a>
         </div>
-        <div class="career">
-            <h1 class="career-title">Human Resource(HR)</h1>
-            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="forhr.html">Apply Now</a>
-        </div>
-        <div class="career">
-            <h1 class="career-title">Human Resource(HR)</h1>
-            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="forhr.html">Apply Now</a>
-        </div>
-        <div class="career">
-            <h1 class="career-title">Human Resource(HR)</h1>
-            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="forhr.html">Apply Now</a>
-        </div>
-        <div class="career">
-            <h1 class="career-title">Human Resource(HR)</h1>
-            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="forhr.html">Apply Now</a>
+
         </div>
     </section>
 
