--- a/forIntern.html
+++ b/forIntern.html
@@ -81,57 +81,40 @@
     <section class="career-decriptions">
         <a class="career-btn" href="../career.html"><i class="fas fa-arrow-left"></i> Back</a>
 
-        <h1 class="career-decriptions-title">Human Resource (HR)</h1>
+        <h1 class="career-decriptions-title">Internship Opportunity</h1>
 
-        <p class="career-decriptions-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure nulla dolorem obcaecati hic doloribus recusandae adipisci quasi, aut consequatur accusamus nobis sed nesciunt itaque nisi alias officiis aliquid pariatur vel delectus aperiam! Cupiditate minima accusantium voluptate molestiae aspernatur nesciunt! Vero sapiente doloribus voluptate ex deleniti similique asperiores officia perferendis! Soluta sit placeat corrupti neque sapiente quam excepturi ipsa tenetur reiciendis optio eos asperiores nostrum, nulla aut inventore doloremque esse quidem quo quos voluptate nihil. Culpa reiciendis neque, a eaque consequatur beatae facilis voluptatum magnam aperiam, deleniti veniam, distinctio officiis voluptatem unde maxime quia blanditiis error impedit consectetur? Et iure cum blanditiis distinctio veritatis, nostrum laboriosam dolore placeat magni! Reprehenderit illo praesentium porro culpa magni quasi aliquam! Magni deleniti libero tempore vel accusantium molestiae dolorem animi, consectetur accusamus explicabo ab excepturi corporis. Ipsum natus exercitationem corporis inventore? Nam vel nemo corporis corrupti, deleniti temporibus repellendus doloremque itaque quam molestiae, molestias numquam possimus ad? Quos repellendus nihil et dicta nisi adipisci neque doloribus laboriosam optio architecto alias eum officia ipsam in cum suscipit, pariatur ad, quam saepe. Dolor ipsa, ex repudiandae modi iure iste praesentium enim impedit numquam aspernatur repellat pariatur! Eos animi impedit a voluptatibus vero accusantium fuga quae officiis?</p>
+        <h5 class="career-decriptions-header2">Time-Length of the Internship: </h5>
 
-        <h3 class="career-descriptions-hrader">We are looking for:</h3>
-        <ul style="list-style-type:square;">
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-        </ul>
+        <p class="career-decriptions-text">The length of the internship varies from a few weeks, to half a year or longer. There is no strict rule for the duration of a placement. We tailor to the need of the intern, the ongoing research and programme. However, USD recommends an engagement of minimum of 3 - 4 months to make the experience beneficial for both the intern and the organization.</p><br>
 
-        <h3 class="career-descriptions-hrader">Skills Required:</h3>
-        <ul>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-        </ul>
+        <h5 class="career-decriptions-header2">Eligibility:</h5>
+        <p class="career-decriptions-text">
+            USD enrolls candidates who possess a passion to learn and contribute to the field of development. We strongly feel that educational or professional background should not limit any potential candidate from applying. Eligibility criteria are flexible to accommodate interns regardless of their curricular and professional experiences. The primary requirements for the Internship Programme are:
+        </p>
+        <ul class="career-decriptions-list">
+            <li>Students accepted into an undergraduate program in a college or university</li>
+            <li>Students enrolled in an undergraduate / graduate program in an accredited academic institution with good CGPA</li>
+            <li>PhD students (national or international) pursuing thesis at a host institution</li>
+            <li>Some experience in the field of development sector like education, health, SDGs can be an asset including experience in research in social sciences and development related programmes</li>
+            <li>Good command in written and spoken English</li>
+            <li>Some knowledge on research methodologies including operating data analysis tools for qualitative and quantitative research</li>
+            <li>Applicants must demonstrate an interest in development sector</li>
+        </ul><br>
 
-        <h3 class="career-descriptions-hrader">Primary Responsibilities:</h3>
-        <ul style="list-style-type:square;">
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-            <li class="list">Minimum BS or BA degree</li>
-            <li class="list">2+ years of experience</li>
-        </ul>
+        <h5 class="career-decriptions-header2">Special Circumstances</h5>
+        <p class="career-decriptions-text">High School graduates aiming to pursue higher studies in public health can engaged in ongoing research project(s) based on an assessment that they will have valuable contributions to organisational initiatives. </p><br>
+        <p class="career-decriptions-text">If candidate's research supports a senior Faculty's ongoing projects on a short or long term.   </p><br>
+        <p class="career-decriptions-text"><span style="font-weight: 900; color: #000;">Note:</span> USD's internship programme does NOT provide any compensation and/or salary for the contribution of the candidate.</p><br>
+        <h5 class="career-decriptions-header2">Requirements for Enrollment: </h5>
+        <p class="career-decriptions-text">To carry out the assigned duties and responsibilities and report to his/her manager accordingly         </p>
+        <h5 class="career-decriptions-header2">Certification </h5>
+        <p class="career-decriptions-text">Interns will receive a certificate and an appreciation letter from the manager and the Director Academic Affairs and the Vice-Chancellor of the University upon successful completion of the internship.</p><br>
 
+        <h5 class="career-decriptions-header2">Apply </h5>
         
-        <h3 class="career-descriptions-hrader">Requeirments:</h3>
-        <ul>
-            <li class="list">Cover Letter</li>
-            <li class="list">Resume</li>
-            <li class="list">Resume</li>
-            <li class="list">Resume</li>
-            <li class="list">Resume</li>
-        </ul>
+        <h3 class="send">Mail us on <a href="mailto:">info@usd.edu</a> must attach which was mentioned <br>Or, </h3>
+        <a class="apply-now" href="#">Apply Now</a>
 
-        <h3 class="send">Mail us on <a href="mailto:">info@usd.edu</a> must attach which was mentioned</h3>
 
     </section>    
     <!-- Specafic Post Section End -->
