--- a/index.html
+++ b/index.html
@@ -131,36 +131,13 @@
         <div class="notices">
             <div class="notice">
                 <div class="date">
-                    <h3 class="day">26th</h3>
-                    <h3 class="month">March</h3>
+                    <h3 class="day">01st</h3>
+                    <h3 class="month">April</h3>
                     <h3 class="year">2023</h3>
                 </div>
-                <a href="Notice/notice.html" class="notice-title">Holiday due to Independence Day 2023.</a>
+                <a href="forIntern.html" class="notice-title">Internship Opportunity </a>
             </div>
-            <div class="notice">
-                <div class="date">
-                    <h3 class="day">26th</h3>
-                    <h3 class="month">March</h3>
-                    <h3 class="year">2023</h3>
-                </div>
-                <a href="Notice/notice.html" class="notice-title">Holiday due to Independence Day 2023.</a>
-            </div>
-            <div class="notice">
-                <div class="date">
-                    <h3 class="day">26th</h3>
-                    <h3 class="month">March</h3>
-                    <h3 class="year">2023</h3>
-                </div>
-                <a href="Notice/notice.html" class="notice-title">Holiday due to Independence Day 2023.</a>
-            </div>
-            <div class="notice">
-                <div class="date">
-                    <h3 class="day">26th</h3>
-                    <h3 class="month">March</h3>
-                    <h3 class="year">2023</h3>
-                </div>
-                <a href="Notice/notice.html" class="notice-title">Holiday due to Independence Day 2023.</a>
-            </div>
+            
         </div>
         <div class="youtube">
             <iframe class="youtube-video" src="https://www.youtube.com/embed/3JCuzY7YjcQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
