--- a/index.html
+++ b/index.html
@@ -83,31 +83,31 @@
 
             <div class="slides fade">
                 <div class="slideNumber">1 / 5</div>
-                <img src="Assets/Images/Slider/pic3.jpg" alt="" style="width:100%">
+                <img src="Assets/Images/Slider/slider 1.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Text</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">2 / 5</div>
-                <img src="Assets/Images/Slider/Pic2.jpg" alt="" style="width:100%">
+                <img src="Assets/Images/Slider/slider 2.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Two</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">3 / 5</div>
-                <img src="Assets/Images/Slider/pic.jpeg" alt="" style="width:100%">
+                <img src="Assets/Images/Slider/slider 3.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Three</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">4 / 5</div>
-                <img src="Assets/Images/Slider/pic4.jpg" alt="" style="width:100%">
+                <img src="Assets/Images/Slider/slider 4.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Four</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">5 / 5</div>
-                <img src="Assets/Images/Slider/pic5.jpeg" alt="" style="width:100%">
+                <img src="Assets/Images/Slider/slider 5.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Five</div>
             </div>
 
