--- a/patners.html
+++ b/patners.html
@@ -86,12 +86,20 @@
     <!-- Patner Section Start -->
     <section class="patners-section">
         <div class="patners-head">
-            <h3 class="patners-title">Our Offical Partners</h3>
+            <h3 class="patners-title">Our Valued Partners</h3>
 
             <div class="patners">
                 <div class="patner">
-                    <img src="Assets/Images/Patners/" alt="">
-                    <p class="patner-txt"></p>
+                    <img src="Assets/Images/Patners/DUHC.jpg" alt="">
+                    <p class="patner-txt">Dhaka University Health Club (DUHC)</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/IRT.jpg" alt="">
+                    <p class="patner-txt">Otu Institute of Research & Training (OIRT) </p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/FSISC.jpg" alt="">
+                    <p class="patner-txt">Forida Seraz Ideal School & College (FSISC)</p>
                 </div>
 
             </div>
