--- a/worldhealthday.html
+++ b/worldhealthday.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/activities.css">
+    <link rel="stylesheet" href="Styles/todaysactivities.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Activities</title>
-    <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
+    <link rel="shortcut icon" type="image/png" href="../Assets/Images/USD.png">
 </head>
 
 <body>
@@ -84,28 +84,15 @@
     </div>
     <!-- Nav Bar End -->
     <!-- Activities Section Start -->
-    <section class="activities">
-        <div class="activity">
-            <div class="images">
-                <img src="Assets/Images/Acitivites/World Health Day.jpg" alt="">
-            </div>
-            <div class="activities-box">
-                <div class="activities-box-title">World Health Day</div>
-                <p class="activities-box-text">Happy World Health Day. Wishing you a great day with a great health.</p>
-                <a class="activities-btn" href="worldhealthday.html">Read More</a>
-            </div>
+    <section class="todaysactivities">
+        <a class="activities-btn" href="activities.html"><i class="fas fa-arrow-left"></i> Back</a>
+        <h3 class="todaysactivities-title">World Health Day</h3>
+        <div class="images">
+            <img src="Assets/Images/Acitivites/World Health Day.jpg" alt="">
         </div>
-        <div class="activity">
-            <div class="images">
-                <img src="Assets/Images/Acitivites/Eid Ul Fitar 2023.jpg" alt="">
-            </div>
-            <div class="activities-box">
-                <div class="activities-box-title">Eid Ul Fitr</div>
-                <p class="activities-box-text">Have A Blaced Eid <br>Wishing your family a joyous celebration! May Allah shower you countless blessings.</p>
-                <a class="activities-btn" href="eidulfitr2023.html">Read More</a>
-            </div>
+        <p class="todaysactivities-text">Happy World Health Day. Wishing you a great day with a great health.</p>
+
         </div>
-        
     </section>
     <!-- Activities Section End -->
 
