--- a/contact.html
+++ b/contact.html
@@ -128,10 +128,9 @@
             <h3 class="footer-title">About Us</h3>
             <p class="footer-text">This is a tertiary level research-based educational institute aiming to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way.</p>
             <ul class="icons">
-                <li><a href="" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                <li><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/university-of-sustainable-development-usd/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/usdedubd/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UChfsDZePc1k950SgCip_qLg" target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
         </div>
 
@@ -142,7 +141,7 @@
                 <li><a href="PhD.html">PhD</a></li>
                 <li><a href="masters.html">Masters</a></li>
                 <li><a href="bechelors.html">Bachelors</a></li>
-                <li><a href="diploma.html">Deploma</a></li>
+                <li><a href="diploma.html">Diploma</a></li>
                 <li><a href="shortcourse.html">Short Course</a></li>
                 <li><a href="workshop.html">Workshop</a></li>
                 <li><a href="traning.html">Traning</a></li>
@@ -162,7 +161,7 @@
 
             <ul class="icons">
                 <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
-                <li><a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                <li><a href="mailto:usd.info.office@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
     </footer>
