--- a/forIntern.html
+++ b/forIntern.html
@@ -118,7 +118,7 @@
 
         <h5 class="career-decriptions-header2">Apply </h5>
         
-        <h3 class="send">Mail us on <a href="mailto:">info@usd.edu</a> must attach which was mentioned <br>Or, </h3>
+        <h3 class="career-decriptions-text">Mail us on <a href="mailto:usd.info.office@gmail.com">usd.info.office@gmail.com</a> must attach which was mentioned <br>Or, </h3>
         <a class="apply-now" href="#">Apply Now</a>
 
 
@@ -129,15 +129,11 @@
     <footer class="footer">
         <div class="about">
             <h3 class="footer-title">About Us</h3>
-            <p class="footer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus quaerat
-                praesentium sequi unde quas modi quia necessitatibus, cupiditate autem consectetur, accusamus ullam
-                dolor provident? Quasi repellendus vitae laudantium distinctio ducimus fugiat beatae, tempore recusandae
-                quod nostrum? Fugit impedit natus, adipisci cupiditate magni repellat nulla at fuga odit. Magni, quas.
-            </p>
+            <p class="footer-text">This is a tertiary level research-based educational institute aiming to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way.</p>
             <ul class="icons">
-                <li><a href="" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                <li><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/university-of-sustainable-development-usd/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/usdedubd/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UChfsDZePc1k950SgCip_qLg" target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
         </div>
 
@@ -148,7 +144,7 @@
                 <li><a href="PhD.html">PhD</a></li>
                 <li><a href="masters.html">Masters</a></li>
                 <li><a href="bechelors.html">Bachelors</a></li>
-                <li><a href="diploma.html">Deploma</a></li>
+                <li><a href="diploma.html">Diploma</a></li>
                 <li><a href="shortcourse.html">Short Course</a></li>
                 <li><a href="workshop.html">Workshop</a></li>
                 <li><a href="traning.html">Traning</a></li>
@@ -156,16 +152,19 @@
         </div>
 
         <div class="contact">
-            <h3 class="footer-title">Contact Us</h3>
-            <iframe title=""  class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545219799154!2d90.22635139107065!3d23.877326074803047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1679664212361!5m2!1sen!2sbd" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3 class="footer-title">Contact</h3>
+            <iframe title="" class="maps"
+                src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d3651.737257411086!2d90.352093!3d23.7567471!3m2!1i1024!2i768!4f13.1!2m1!1schand%20uddan%20housing%2C%20mohammadpur%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1683140674142!5m2!1sen!2sbd"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
-                <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
+                <li class="contact-info">WhatsApp: <a href="tel:">+8801853136927</a></li>
             </ul>
 
             <ul class="icons">
-                <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
-                <li><a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                <li><a href="tel:01853136927" target="_blank"><i class="fas fa-phone"></i></a></li>
+                <li><a href="mailto:usd.info.office@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
     </footer>
